@startuml


class eveSI{
#esiRequestHandler($endpoint, $access_token = null, $method = 'GET', $body = null) : string 
}

alliances_endpoints *-- eveSI
class alliances_endpoints{
	-allianceID
}
	getAlliancesContacts *-- alliances_endpoints
	class getAlliancesContacts{
		+getAssociativeArray($alliance_id, $access_token): array
		+getObject($alliance_id, $access_token): object
	}
	getAlliancesCorporations *-- alliances_endpoints
	class getAlliancesCorporations{
		+getAssociativeArray($alliance_id, $access_token): array
		+getObject($alliance_id, $access_token): object
	}	
	getAlliancesIcon *-- alliances_endpoints
	class getAlliancesIcon{
		+getAssociativeArray($alliance_id, $access_token): array
		+getObject($alliance_id, $access_token): object
	}
	
characters_endpoints *-- eveSI	
class characters_endpoints{

}

corporations_endpoints *-- eveSI
class corporations_endpoints{

}

dogma_endpoints *-- eveSI
class dogma_endpoints{

}

fw_endpoints *-- eveSI
class fw_endpoints{

}

incursion_endpoints *-- eveSI
class incursion_endpoints{

}

industry_endpoints *-- eveSI
class industry_endpoints{

}

loyalty_endpoints *-- eveSI
class loyalty_endpoints{

}

markets_endpoints *-- eveSI
class markets_endpoints{

}

opportunities_endpoints *-- eveSI
class opportunities_endpoints{

}

route_endpoints *-- eveSI
class route_endpoints{

}

sovereignty_endpoints *-- eveSI
class sovereignty_endpoints{

}

status_endpoints *-- eveSI
class status_endpoints{

}

universe_endpoints *-- eveSI
class universe_endpoints{

}

war_endpoints *-- eveSI
class war_endpoints{

}

@enduml
